[package]
name = "grpc-test"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.1"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.0"

[build-dependencies]
tonic-build = "0.12.0"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
